# kaggle-titanic-cpp

cpp_predictor/: CMakeLists.txt  Perceptron.cpp  Perceptron.h  gui_main.cpp  learning.cpp  learning.h  main.cpp
